--- a/Youtube_Analysis.ipynb
+++ b/Youtube_Analysis.ipynb
@@ -4767,13 +4767,15 @@
     "px.bar(data_frame=cdf[0:20], x = 'channel_title', y = 'total_videos')"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+ {
+   "cell_type": "markdown",
    "id": "9691ede5-7bad-410a-8912-aef695559874",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Author : Sushmita Shekhawat\n",
+    "    \n",
+    "Edited : 5 May 2024"
+   ]
   }
  ],
  "metadata": {
